// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API TESTS CREATE character 1`] = `
{
  "data": {
    "createCharacter": {
      "episodes": [
        "NEWHOPE",
      ],
      "name": "GERENAL KENOOOOOBI",
      "planet": "HELLO THERE",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`API TESTS DELETE character 1`] = `
{
  "data": {
    "deleteCharacter": {
      "episodes": [
        "NEWHOPE",
        "EMPIRE",
        "JEDI",
      ],
      "id": "c74e4238-9ba8-4cc2-8c1c-eb9d20b76084",
      "name": "Luke Skywalker",
      "planet": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`API TESTS GET ALL characters 1`] = `
{
  "data": {
    "getAllCharacters": {
      "items": [
        {
          "id": "c74e4238-9ba8-4cc2-8c1c-eb9d20b76084",
          "name": "Luke Skywalker",
        },
        {
          "id": "a90fc28f-8b6a-4f08-a14b-b67c449fb8bd",
          "name": "Darth Vader",
        },
        {
          "id": "b4fc3e01-06e1-401d-91c0-f7410ca78005",
          "name": "Han Solo",
        },
        {
          "id": "67fb1ec0-57df-4461-9d5c-e077426f99fa",
          "name": "Leia Organa",
        },
        {
          "id": "7d78ad4b-cbe2-4d11-9e51-eeae26e0839a",
          "name": "Wilhuff Tarkin",
        },
        {
          "id": "df9976e4-20b1-4ed1-927e-18650f6fcef6",
          "name": "C-3PO",
        },
        {
          "id": "cb149869-47ec-4002-86fd-78c9106a556f",
          "name": "R2-D2",
        },
      ],
      "lastEvaluatedKey": "c74e4238-9ba8-4cc2-8c1c-eb9d20b76084",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`API TESTS GET character 1`] = `
{
  "data": {
    "getCharacter": {
      "episodes": [
        "NEWHOPE",
        "EMPIRE",
        "JEDI",
      ],
      "id": "c74e4238-9ba8-4cc2-8c1c-eb9d20b76084",
      "name": "Luke Skywalker",
      "planet": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;

exports[`API TESTS UPDATE character 1`] = `
{
  "data": {
    "updateCharacter": {
      "episodes": [
        "NEWHOPE",
      ],
      "id": "c74e4238-9ba8-4cc2-8c1c-eb9d20b76084",
      "name": "GERENAL KENOOOOOBI",
      "planet": "HELLO THERE",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": {
    "headers": Headers {
      Symbol(map): {},
    },
  },
}
`;
